<resources>
    <string name="app_name">Agrigroww Admin</string>
    <string name="made_with_in_india">Made with 💖 in India</string>
    <string name="phone_code_number">+91</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="admin_login">Admin Login</string>
    <string name="verify">Verify</string>
    <string name="didn_t_receive_otp">Didn`t receive otp</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="register_as_an_admin">Register as an Admin</string>
    <string name="optional_profile_photo">(optional profile photo)</string>
    <string name="enter_name">Enter Name</string>
    <string name="required_values">*required</string>
    <string name="select_date_of_birth">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="continue_btn">Continue</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enter_authentication_number">Enter Authentication Number</string>
    <string name="requests">Req</string>
    <string name="users">Users</string>
    <string name="experts">Experts</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>
    <string name="phone_no">Phone No.</string>
    <string name="userId">User Id:</string>
    <string name="total_requests">Total Requests:</string>
    <string name="search">Search</string>
    <string name="email_user">Email User</string>
    <string name="ban_users">Ban User</string>
    <string name="remove_user">Remove User</string>
    <string name="all_users">All</string>
    <string name="search_users">Search</string>
    <string name="banned_users">Banned</string>
    <string name="unban_user">Unban User</string>
    <string name="send_email_to_user">Also send email to user</string>
    <string name="send_Email_to_user_user_has_no_email">Also send email to user\n(User has no registered email)</string>
    <string name="enter_ban_reason">Enter ban reason</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_body">Enter Body</string>
    <string name="send">Send</string>
    <string name="extra_text"><![CDATA[1. To add new line use \\n\n2. You can also use html tags like <b>,<font>,<img> etc]]></string>
    <string name="extra">Extra:</string>
    <string name="confirm_email">Please confirm,\nDo you want to send this email to</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="type_message_here">Type message here</string>
    <string name="members">Members</string>
    <string name="add_expert">Add Expert</string>
    <string name="this_request_has_been_marked_solved">This request has been marked solved!</string>
</resources>