<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mode_inverse"
    tools:context=".RegistrationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mode_inverse">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/registration_animationView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="registration.json"
            app:lottie_loop="true" />

        <TextView
            android:id="@+id/textView_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registration_animationView"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/acme"
            android:text="@string/register_as_an_admin"
            android:textColor="@color/mode"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!-- <ImageView
             android:id="@+id/register_profile_image"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_below="@+id/textView_register"
             android:layout_centerHorizontal="true"
             android:src="@drawable/profile_image"
             android:scaleType="centerCrop"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="10dp"
             />-->

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/register_profile_image"
            android:layout_width="106dp"
            android:layout_height="106dp"
            android:layout_below="@+id/textView_register"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_user_bar"
            app:civ_border_color="@color/mode"
            app:civ_border_width="1dp" />

        <TextView
            android:id="@+id/optional_profile_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_profile_image"
            android:layout_centerHorizontal="true"
            android:text="@string/optional_profile_photo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textview_name_signup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/optional_profile_photo"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_name"
            app:endIconMode="clear_text"
            app:endIconTint="@color/mode"
            app:helperText="@string/required_values"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_name_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLength="30" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textview_dateofbirth_signup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_name_signup"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/select_date_of_birth"
            app:endIconDrawable="@drawable/round_calendar_month"
            app:endIconMode="custom"
            app:endIconTint="@color/mode"
            app:helperText="@string/required_values"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_dateofbirth_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textview_authentication_number_signup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_dateofbirth_signup"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_authentication_number"
            app:endIconMode="clear_text"
            app:endIconTint="@color/mode"
            app:helperText="@string/required_values"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_authentication_number_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:maxLength="8"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/textView_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_authentication_number_signup"
            android:layout_marginStart="30dp"
            android:text="@string/gender"
            android:textColor="@color/mode"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/radio_group_register_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_gender"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="10dp"
                android:text="@string/female"
                android:textColor="@color/mode"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="10dp"
                android:text="@string/male"
                android:textColor="@color/mode"
                android:textSize="15sp" />

        </RadioGroup>

        <FrameLayout
            android:id="@+id/frame_layout_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radio_group_register_gender">

            <Button
                android:id="@+id/button_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/continue_btn" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:theme="@style/CircularProgress"
                android:visibility="gone" />
        </FrameLayout>

        <!--<ImageButton
            android:id="@+id/change_language_btn"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_18sdp"
            android:background="@color/mode_inverse"
            app:tint="@color/mode"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_change_language" />-->
    </RelativeLayout>
</ScrollView>