<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/extra_background">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/otp_animationView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:lottie_fileName="girl_otp.json"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>

    <ImageButton
        android:id="@+id/cancel_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cancel_button"
        android:background="@drawable/roundcorner_imagebutton"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_10sdp"
        />

    <TextView
        android:id="@+id/textView_otp_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter OTP to verify"
        android:layout_below="@+id/otp_animationView"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:fontFamily="@font/acme"
        android:textStyle="bold"
        android:textColor="@color/mode"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:id="@+id/textView_otp_Sent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OTP will be sent to +918876708209"
        android:layout_below="@+id/textView_otp_verify"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:fontFamily="@font/acme"
        android:layout_marginTop="5dp"
        />

    <LinearLayout
        android:id="@+id/enter_otp_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@+id/textView_otp_Sent">

        <EditText
            android:id="@+id/inputotp1"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/otp_background"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/mode"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor"/>
        <EditText
            android:id="@+id/inputotp2"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/otp_background"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/mode"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor"/>
        <EditText
            android:id="@+id/inputotp3"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/otp_background"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/mode"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor"/>
        <EditText
            android:id="@+id/inputotp4"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/otp_background"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/mode"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor"/>
        <EditText
            android:id="@+id/inputotp5"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/otp_background"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/mode"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor"/>
        <EditText
            android:id="@+id/inputotp6"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/otp_background"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/mode"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor"/>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/resend_otp_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_below="@+id/enter_otp_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/didn_t_receive_otp"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/textresendotp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/resend_otp"
            android:textColor="@color/main_color"/>


    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resend_otp_layout"
        android:layout_marginBottom="@dimen/_10sdp"
        >

        <Button
            android:id="@+id/button_verify_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:text="@string/verify"

            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:theme="@style/CircularProgress"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
    </FrameLayout>

</RelativeLayout>